// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots matches active snapshot 1`] = `
<Button
  active={true}
  clickAction={[Function]}
  label="Button"
/>
`;

exports[`Button Snapshots matches disabled snapshot 1`] = `
<Button
  clickAction={[Function]}
  disabled={true}
  label="Button"
/>
`;

exports[`Button Snapshots matches orientation snapshots 1`] = `
<button
  class="sc-eqUAAy yZtqq"
  orientation="vertical"
  title="vertical"
>
  <span>
    vertical
  </span>
</button>
`;

exports[`Button Snapshots matches orientation snapshots 2`] = `
<button
  class="sc-eqUAAy fQCXEn"
  orientation="horizontal"
  title="horizontal"
>
  <span>
    horizontal
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 1`] = `
<button
  class="sc-eqUAAy hIYAgf"
  title="raised"
>
  <span>
    raised
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 2`] = `
<button
  class="sc-eqUAAy kZAcqG"
  title="outline"
>
  <span>
    outline
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 3`] = `
<button
  class="sc-eqUAAy iDAGyr"
  title="shadow"
>
  <span>
    shadow
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 4`] = `
<button
  class="sc-eqUAAy jQFpAr"
  title="none"
>
  <span>
    none
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 5`] = `
<button
  class="sc-eqUAAy fQCXEn"
  title="raised-outline"
>
  <span>
    raised-outline
  </span>
</button>
`;

exports[`Button Snapshots matches prefix/suffix snapshot 1`] = `
<Button
  clickAction={[Function]}
  label="Button"
  prefix="Prefix"
  suffix="Suffix"
/>
`;

exports[`Button Snapshots matches size snapshots 1`] = `
<button
  class="sc-eqUAAy fQCXEn"
  title="normal"
>
  <span>
    normal
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 2`] = `
<button
  class="sc-eqUAAy cWhUZA"
  title="xs"
>
  <span>
    xs
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 3`] = `
<button
  class="sc-eqUAAy gqmdSb"
  title="sm"
>
  <span>
    sm
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 4`] = `
<button
  class="sc-eqUAAy cJKqky"
  title="lg"
>
  <span>
    lg
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 5`] = `
<button
  class="sc-eqUAAy hBuApE"
  title="xl"
>
  <span>
    xl
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 1`] = `
<button
  class="sc-eqUAAy cYcyBv"
  title="danger"
  type="danger"
>
  <span>
    danger
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 2`] = `
<button
  class="sc-eqUAAy jOZpRN"
  title="info"
  type="info"
>
  <span>
    info
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 3`] = `
<button
  class="sc-eqUAAy iJA-DOq"
  title="primary"
  type="primary"
>
  <span>
    primary
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 4`] = `
<button
  class="sc-eqUAAy dkjYpH"
  title="warning"
  type="warning"
>
  <span>
    warning
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 5`] = `
<button
  class="sc-eqUAAy fQCXEn"
  title="polling"
  type="polling"
>
  <span>
    polling
  </span>
</button>
`;
